Sonar issues review, fix properties constant name.
Issue-ID: DMAAP-1585
Signed-off-by: sliard <samuel.liard@gmail.com>
Change-Id: Ic8152c42bb708c825b345dcbd8ac6c240fff66dd